<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
   <item android:id="@+id/menu_add"
        android:title="@string/menu_add"
        android:icon="@drawable/ico_add"
        android:showAsAction="always" />    
    
   <item android:id="@+id/menu_list"
        android:title="@string/menu_list"
        android:icon="@drawable/ico_list"
        android:showAsAction="always" />

   <item
        android:id="@+id/menu_reset"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/reset"/>

   <item
        android:id="@+id/menu_default"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_default"/>   

   <item
        android:id="@+id/menu_help"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/help"/>

   <item
        android:id="@+id/menu_about"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/about"/>
</menu>