<menu xmlns:android="http://schemas.android.com/apk/res/android" >
   <item android:id="@+id/menu_add"
        android:title="@string/menu_add"
        android:icon="@drawable/ico_add"
        android:showAsAction="always" />
   
   <item
        android:id="@+id/menu_delete_selected_mortgages"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_delete_selected_mortgages"/>
   <item
        android:id="@+id/menu_delete_all_mortgages"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/menu_delete_all_mortgages"/>

   <item
        android:id="@+id/menu_help"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/help"/>

   <item
        android:id="@+id/menu_about"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/about"/>      

</menu>