<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/frg_input">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal">    
        
    <TextView
        android:text="@string/mortgage_type_input"
        android:layout_weight="@integer/form_text_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />
      
    <Spinner android:id="@+id/mortgage_type"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/form_edit_weight"
        android:layout_width="0dp" /> 

    <TextView
        android:text="\?"
        android:textStyle="bold"
        android:textColor="#ff888888"
        android:layout_weight="@integer/form_suffix_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="true"
        android:onClick="showMortgageTypeMoreInfo"/>    
    
</LinearLayout>            
        
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">    
    
    <TextView
        android:text="@string/mortgage_name_input"                        
        android:layout_weight="@integer/form_text_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip"/>        
    
    <EditText
        android:id="@+id/mortgage_name"   
        android:layout_weight="@integer/form_edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mortgage_name_text"
        android:inputType="textCapSentences" />

    <TextView
        android:text=""                        
        android:layout_weight="@integer/form_suffix_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>     
        
</LinearLayout>        

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/mortgage_purchase_price_input"                        
        android:layout_weight="@integer/form_text_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/mortgage_purchase_price"   
        android:layout_weight="@integer/form_edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mortgage_purchase_price_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text=""                        
        android:layout_weight="@integer/form_suffix_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>     
        
    </LinearLayout>        

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/mortgage_downpayment_input"                        
        android:layout_weight="@integer/form_text_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/mortgage_downpayment"   
        android:layout_weight="@integer/form_edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mortgage_downpayment_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text=""                        
        android:layout_weight="@integer/form_suffix_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>     
        
    </LinearLayout>        

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/mortgage_interest_rate_input"                        
        android:layout_weight="@integer/form_text_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/mortgage_interest_rate"   
        android:layout_weight="@integer/form_edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mortgage_interest_rate_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text="@string/percent"                        
        android:layout_weight="@integer/form_suffix_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>             
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:text="@string/mortgage_term_input"                        
        android:layout_weight="@integer/form_text_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/mortgage_term_years"   
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mortgage_term_years_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text="@string/mortgage_term_years_abbr"                        
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    
    <EditText
        android:id="@+id/mortgage_term_months"   
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mortgage_term_months_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text="@string/mortgage_term_months_abbr"                        
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>    
    </LinearLayout>

    <!-- Advanced (tax, fees, insurance) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:onClick="toggleVisibilityFees"
        android:layout_marginTop="10dp"
        android:background="#FFe9e9e9"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:id="@+id/advanced_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced_input_invisible">
        </TextView>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/advanced_input"
    android:orientation="vertical"
    android:visibility="gone">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/mortgage_property_insurance_input"                        
        android:layout_weight="@integer/form_text_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/mortgage_property_insurance"   
        android:layout_weight="@integer/form_edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mortgage_property_insurance_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text=""                        
        android:layout_weight="@integer/form_suffix_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>             
</LinearLayout>   
  
  
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/mortgage_property_tax_input"                        
        android:layout_weight="@integer/form_text_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/mortgage_property_tax"   
        android:layout_weight="@integer/form_edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mortgage_property_tax_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text=""                        
        android:layout_weight="@integer/form_suffix_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>             
</LinearLayout> 
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/mortgage_pmi_input"                        
        android:layout_weight="@integer/form_text_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/mortgage_pmi"   
        android:layout_weight="@integer/form_edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mortgage_pmi_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text="%"                        
        android:layout_weight="@integer/form_suffix_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>             
    </LinearLayout> 
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/mortgage_closing_fees_input"                        
        android:layout_weight="@integer/form_text_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/mortgage_closing_fees"   
        android:layout_weight="@integer/form_edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mortgage_closing_fees_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text=""
        android:layout_weight="@integer/form_suffix_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
</LinearLayout> 

   </LinearLayout>

    <!-- Extra payments (optional) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:onClick="toggleVisibilityExtraPayment"
        android:layout_marginTop="10dp"
        android:background="#FFe9e9e9"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:id="@+id/advanced_extra_payments_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced_extra_payments_input_invisible">
        </TextView>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/advanced_extra_payments_input"
    android:orientation="vertical"
    android:visibility="gone">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/mortgage_extra_payment_input"                        
        android:layout_weight="@integer/form_text_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />
    
    <EditText
        android:id="@+id/mortgage_extra_payment"   
        android:layout_weight="@integer/form_edit_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mortgage_extra_payment_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text=""
        android:layout_weight="@integer/form_suffix_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>      
    
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text=""                        
        android:layout_weight="@integer/form_text_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />

      <RadioGroup
        android:id="@+id/radioExtraPaymentFrequency"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="wrap_content" >
 
        <RadioButton
            android:id="@+id/radioYearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_yearly" 
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>
 
        <RadioButton
            android:id="@+id/radioMonthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_monthly"
            android:onClick="onRadioButtonClicked"/>
 
    </RadioGroup>         
   
</LinearLayout>

 

   </LinearLayout>

     <LinearLayout 
        android:id="@+id/sumbit_mortgage_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"          
        android:gravity="center"        
        android:orientation="horizontal">
         
    <Button
        android:id="@+id/add_mortgage_button"
        android:layout_width="fill_parent"            
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:text="@string/calculate_mortgage"    
        android:textColor="#FFFFFFFF"                      
        android:background="@drawable/button_confirm"    
        android:onClick="addMortgage" /> 
    </LinearLayout>
</LinearLayout>
</ScrollView>
