<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".FrgSummaryMulti"
    android:id="@+id/frg_summary_multi">

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">      
        
      <com.codelemma.mortgagecmp.NonScrollableHorizontalScroller
        android:id="@+id/s_multi_summary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false">

      <LinearLayout 
        android:orientation="vertical"      
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:paddingBottom="5dp">     
          
      <!-- Name -->    
          
      <LinearLayout
        android:id="@+id/smulti_mortgage_name"
        style="@style/summary_multi_row">
      <TextView
        android:text="@string/s_mortgage_name_title"
        style="@style/summary_multi_column"
        android:textStyle="bold"/>

      </LinearLayout>

      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FFCCCCCC"/>    
      
      <!-- Type -->      
      
      <LinearLayout
        android:id="@+id/s_multi_mortgage_type" 
        style="@style/summary_multi_row">

      <TextView
        android:text="@string/s_mortgage_type_title"     
        style="@style/summary_multi_column"/>
      </LinearLayout>

      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FFCCCCCC"/>    
      
      <!-- Loan amount -->      
      
      <LinearLayout
        android:id="@+id/smulti_mortgage_loan_amount"                                   
        style="@style/summary_multi_row">

      <TextView
        android:text="@string/s_mortgage_amount_title"       
        style="@style/summary_multi_column"/>

      </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FFCCCCCC"/>    
          
      <!-- Interest -->    
    
    <LinearLayout
        android:id="@+id/smulti_mortgage_interest"                    
        style="@style/summary_multi_row">


      <TextView
        android:text="@string/mortgage_interest_rate_input"  
        style="@style/summary_multi_column"/>   
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FFCCCCCC"/>    
    
      <!-- Term -->    
    
    <LinearLayout
        android:id="@+id/s_multi_mortgage_term"                       
        style="@style/summary_multi_row">


      <TextView
        android:text="@string/s_mortgage_term_title"      
        style="@style/summary_multi_column"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FFCCCCCC"/>
    
      <!-- Last payment -->    
    
    <LinearLayout
        android:id="@+id/s_multi_mortgage_last_payment_date"                       
        style="@style/summary_multi_row">


      <TextView
        android:text="@string/s_mortgage_last_payment_date_title"               
        style="@style/summary_multi_column"/>

    </LinearLayout>    
        
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FFCCCCCC"/>    
      
      <!-- Extra payment -->    
      
      <LinearLayout
        android:id="@+id/s_multi_mortgage_extra_payments"                                   
        style="@style/summary_multi_row">

      <TextView
        android:text="@string/s_mortgage_extra_payments_title"      
        style="@style/summary_multi_column"/>

      </LinearLayout>
      
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FFCCCCCC"/>    
      
      <!-- Term reduction -->  
      
    <LinearLayout
        android:id="@+id/s_mortgage_term_reduction"                    
        style="@style/summary_multi_row">


      <TextView
        android:text="@string/s_mortgage_term_reduction_title"       
        style="@style/summary_multi_column"/>  

    </LinearLayout>     
    
  </LinearLayout>
</com.codelemma.mortgagecmp.NonScrollableHorizontalScroller>
  </LinearLayout>
</ScrollView>
   